fix: footer out of bound

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1893,6 +1893,14 @@ h4 {
   gap: 1.5rem;
 }
 
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -1905,6 +1913,10 @@ h4 {
 
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+
+.gap-y-16 {
+  row-gap: 4rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -3535,6 +3547,10 @@ h4 {
     display: inline;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:grid {
     display: grid;
   }
@@ -3581,6 +3597,14 @@ h4 {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
   }
 
   .md\:py-56 {
@@ -3935,6 +3959,10 @@ h4 {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:gap-16 {
+    gap: 4rem;
   }
 
   .lg\:px-0 {
